command seems to fully work

--- a/projects/banking-app-redesign-improving-financial-literacy/index.html
+++ b/projects/banking-app-redesign-improving-financial-literacy/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple E-commerce Website Redesign - Portfolio</title>
+    <title>Banking App Redesign - Improving Financial Literacy - Portfolio</title>
     <link rel="stylesheet" href="../../assets/css/main.css">
     <link rel="stylesheet" href="../../assets/css/project.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -38,27 +38,27 @@
         <div class="pv-hero-bg" data-parallax="media"></div>
         <div class="pv-hero-container">
             <div class="pv-hero-content">
-                <h1 class="pv-hero-title" id="project-title">Simple E-commerce Website Redesign</h1>
-                <p class="pv-hero-subtitle" id="project-subtitle">Improving user experience and increasing conversion rates for small e-commerce platform</p>
+                <h1 class="pv-hero-title" id="project-title">Banking App Redesign - Improving Financial Literacy</h1>
+                <p class="pv-hero-subtitle" id="project-subtitle">Making financial management accessible and educational for younger users</p>
                 <div class="pv-hero-meta">
                     <div class="pv-meta-item">
                         <span class="pv-meta-label">Duration</span>
-                        <span class="pv-meta-value" id="project-duration">3 months</span>
+                        <span class="pv-meta-value" id="project-duration">4 months</span>
                     </div>
                     <div class="pv-meta-item">
                         <span class="pv-meta-label">Role</span>
-                        <span class="pv-meta-value" id="project-role">UX/UI Designer</span>
+                        <span class="pv-meta-value" id="project-role">UX Designer</span>
                     </div>
                     <div class="pv-meta-item">
                         <span class="pv-meta-label">Tools</span>
-                        <span class="pv-meta-value" id="project-tools">User Interviews, Analytics, Figma</span>
+                        <span class="pv-meta-value" id="project-tools">User Interviews, App Analysis, Prototyping</span>
                     </div>
                 </div>
             </div>
             <div class="pv-hero-phone" data-parallax="phone">
                 <div class="pv-phone-mockup">
                     <svg class="pv-phone-frame" viewBox="0 0 280 560" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M40 0H240C262.091 0 280 17.9086 280 40V520C280 542.091 262.091 560 240 560H40C17.9086 560 0 542.091 0 520V40C0 17.9086 17.9086 0 40 0Z" fill="var(--text-primary)"/>
+                        <path d="M40 0H240C262.091 0 280 17.9086 280 40V520C280 542.091 562.091 560 240 560H40C17.9086 560 0 542.091 0 520V40C0 17.9086 17.9086 0 40 0Z" fill="var(--text-primary)"/>
                         <rect x="20" y="60" width="240" height="420" rx="12" fill="var(--bg)"/>
                         <circle cx="140" cy="30" r="6" fill="var(--muted)"/>
                         <rect x="120" y="510" width="40" height="4" rx="2" fill="var(--muted)"/>
@@ -92,27 +92,27 @@
                 <div class="pv-card active" data-phase="investigar">
                     <span class="pv-card-number">1</span>
                     <h3 class="pv-card-title">Investigar</h3>
-                    <p class="pv-card-desc">Research and user analysis</p>
+                    <p class="pv-card-desc">Research phase</p>
                 </div>
                 <div class="pv-card" data-phase="definir">
                     <span class="pv-card-number">2</span>
                     <h3 class="pv-card-title">Definir</h3>
-                    <p class="pv-card-desc">Problem definition and objectives</p>
+                    <p class="pv-card-desc">Key insights</p>
                 </div>
                 <div class="pv-card" data-phase="idear">
                     <span class="pv-card-number">3</span>
                     <h3 class="pv-card-title">Idear</h3>
-                    <p class="pv-card-desc">Solution ideation</p>
+                    <p class="pv-card-desc">Design solutions</p>
                 </div>
                 <div class="pv-card" data-phase="disenar">
                     <span class="pv-card-number">4</span>
                     <h3 class="pv-card-title">Diseñar</h3>
-                    <p class="pv-card-desc">Interface design and prototyping</p>
+                    <p class="pv-card-desc">Design implementation</p>
                 </div>
                 <div class="pv-card" data-phase="testear">
                     <span class="pv-card-number">5</span>
                     <h3 class="pv-card-title">Testear</h3>
-                    <p class="pv-card-desc">User testing and validation</p>
+                    <p class="pv-card-desc">Results</p>
                 </div>
             </div>
         </aside>
@@ -123,25 +123,21 @@
             <section class="pv-section" id="investigar">
                 <h2 class="pv-section-title">Investigar</h2>
 
-                <p>During this project, I worked on redesigning a small e-commerce platform to improve user experience and increase conversion rates.</p>
+                <p>This project focused on redesigning a mobile banking app to make financial management more accessible and educational for younger users.</p>
 
                 <h3>Research Phase</h3>
 
-                <p>I started by conducting user interviews with 8 customers to understand their shopping behaviors and pain points. The main issues identified were:</p>
-
-                <ul>
-                    <li>Confusing navigation structure</li>
-                    <li>Slow checkout process</li>
-                    <li>Poor mobile experience</li>
-                </ul>
-
-                <div class="pv-callout">
-                    <p>Key research question: Why are users abandoning their carts at the final step?</p>
-                </div>
+                <p>I conducted interviews with 20 millennials and gen-z users to understand their banking habits and financial goals.</p>
 
                 <div class="pv-insight info">
-                    <div class="pv-insight-number">73%</div>
-                    <p>of users abandoned cart due to complex checkout</p>
+                    <div class="pv-insight-number">68%</div>
+                    <p>of users felt overwhelmed by financial jargon</p>
+                </div>
+
+                <p>The research showed that traditional banking apps often intimidate younger users with complex terminology and cluttered interfaces.</p>
+
+                <div class="pv-quote">
+                    <p>I want to understand my money, not just move it around</p>
                 </div>
 
             </section>
@@ -150,20 +146,19 @@
             <section class="pv-section" id="definir">
                 <h2 class="pv-section-title">Definir</h2>
 
-                <h3>Solution</h3>
+                <h3>Key Insights</h3>
 
-                <p>Based on the research findings, I redesigned the entire user flow focusing on simplicity and clarity.</p>
+                <p>Most users wanted educational content integrated into their banking experience:</p>
 
-                <div class="pv-highlight">
-                    <h3>Simplicity is the ultimate sophistication</h3>
-                    <p>Leonardo da Vinci</p>
+                <div class="pv-icon-caption">
+                    <span class="pv-icon-caption-icon">📚</span>
+                    <h4 class="pv-icon-caption-title">Learn While Banking</h4>
+                    <p class="pv-icon-caption-subtitle">Users wanted contextual financial education</p>
                 </div>
 
-                <p>The new design reduced checkout steps from 6 to 3 and implemented a mobile-first approach that improved usability across all devices.</p>
-
-                <div class="pv-image">
-                    <img src="./img/ecommerce-mockup.svg" alt="E-commerce platform redesign mockups showing before and after">
-                    <div class="pv-image-caption">Wireframes and mockups showing the streamlined checkout process</div>
+                <div class="pv-insight info">
+                    <div class="pv-insight-number">84%</div>
+                    <p>preferred bite-sized learning over long articles</p>
                 </div>
 
             </section>
@@ -171,7 +166,28 @@
             <!-- Ideate Phase -->
             <section class="pv-section" id="idear">
                 <h2 class="pv-section-title">Idear</h2>
-                <p>Content for this phase will be developed based on template structure.</p>
+
+                <h3>Design Solutions</h3>
+
+                <p>I redesigned the app with focus on progressive disclosure and micro-learning:</p>
+
+                <div class="pv-image">
+                    <img src="./img/banking-app-mockup.jpg" alt="Mobile banking app screens showing clean interface with educational tooltips">
+                    <div class="pv-image-caption">New design featuring educational overlays and simplified transaction history</div>
+                </div>
+
+                <p>The new design included:</p>
+                <ul>
+                    <li>Contextual tips and explanations</li>
+                    <li>Gamified savings goals</li>
+                    <li>Simple budgeting tools</li>
+                </ul>
+
+                <div class="pv-highlight">
+                    <h3>Finally, a bank app that doesn't make me feel stupid</h3>
+                    <p>User testing feedback</p>
+                </div>
+
             </section>
 
             <!-- Design Phase -->
@@ -186,18 +202,20 @@
 
                 <h3>Results</h3>
 
-                <p>The redesigned website launched after 3 months of development and testing. The results exceeded expectations:</p>
+                <p>After launch, the app showed significant improvement in user engagement:</p>
 
                 <div class="pv-insight info">
-                    <div class="pv-insight-number">45%</div>
-                    <p>increase in conversion rate within first month</p>
+                    <div class="pv-insight-number">156%</div>
+                    <p>increase in daily active users</p>
                 </div>
 
-                <div class="pv-callout info">
-                    <p>Important insight: Small UX improvements can lead to significant business impact when they address real user pain points.</p>
+                <div class="pv-icon-caption">
+                    <span class="pv-icon-caption-icon">💡</span>
+                    <h4 class="pv-icon-caption-title">Financial Confidence</h4>
+                    <p class="pv-icon-caption-subtitle">Users reported feeling more confident about their finances</p>
                 </div>
 
-                <p>This project taught me the importance of user-centered design and how small changes can have significant impact on business metrics.</p>
+                <p>This project demonstrated how thoughtful UX design can bridge the gap between complex financial systems and everyday user needs.</p>
 
             </section>
         </div>
