--- a/projects/mental-health-app-complete-ux-process/index.html
+++ b/projects/mental-health-app-complete-ux-process/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple E-commerce Website Redesign - Portfolio</title>
+    <title>Mental Health App Design - Complete UX Process - Portfolio</title>
     <link rel="stylesheet" href="../../assets/css/main.css">
     <link rel="stylesheet" href="../../assets/css/project.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -38,20 +38,20 @@
         <div class="pv-hero-bg" data-parallax="media"></div>
         <div class="pv-hero-container">
             <div class="pv-hero-content">
-                <h1 class="pv-hero-title" id="project-title">Simple E-commerce Website Redesign</h1>
-                <p class="pv-hero-subtitle" id="project-subtitle">Improving user experience and increasing conversion rates for small e-commerce platform</p>
+                <h1 class="pv-hero-title" id="project-title">Mental Health App Design - Complete UX Process</h1>
+                <p class="pv-hero-subtitle" id="project-subtitle">Creating a safe, accessible platform for mental health support</p>
                 <div class="pv-hero-meta">
                     <div class="pv-meta-item">
                         <span class="pv-meta-label">Duration</span>
-                        <span class="pv-meta-value" id="project-duration">3 months</span>
+                        <span class="pv-meta-value" id="project-duration">6 months</span>
                     </div>
                     <div class="pv-meta-item">
                         <span class="pv-meta-label">Role</span>
-                        <span class="pv-meta-value" id="project-role">UX/UI Designer</span>
+                        <span class="pv-meta-value" id="project-role">UX Designer</span>
                     </div>
                     <div class="pv-meta-item">
                         <span class="pv-meta-label">Tools</span>
-                        <span class="pv-meta-value" id="project-tools">User Interviews, Analytics, Figma</span>
+                        <span class="pv-meta-value" id="project-tools">User Research, Prototyping, Testing</span>
                     </div>
                 </div>
             </div>
@@ -92,12 +92,12 @@
                 <div class="pv-card active" data-phase="investigar">
                     <span class="pv-card-number">1</span>
                     <h3 class="pv-card-title">Investigar</h3>
-                    <p class="pv-card-desc">Research and user analysis</p>
+                    <p class="pv-card-desc">Research and discovery</p>
                 </div>
                 <div class="pv-card" data-phase="definir">
                     <span class="pv-card-number">2</span>
                     <h3 class="pv-card-title">Definir</h3>
-                    <p class="pv-card-desc">Problem definition and objectives</p>
+                    <p class="pv-card-desc">Problem definition</p>
                 </div>
                 <div class="pv-card" data-phase="idear">
                     <span class="pv-card-number">3</span>
@@ -107,12 +107,12 @@
                 <div class="pv-card" data-phase="disenar">
                     <span class="pv-card-number">4</span>
                     <h3 class="pv-card-title">Diseñar</h3>
-                    <p class="pv-card-desc">Interface design and prototyping</p>
+                    <p class="pv-card-desc">Design and prototyping</p>
                 </div>
                 <div class="pv-card" data-phase="testear">
                     <span class="pv-card-number">5</span>
                     <h3 class="pv-card-title">Testear</h3>
-                    <p class="pv-card-desc">User testing and validation</p>
+                    <p class="pv-card-desc">Testing and impact</p>
                 </div>
             </div>
         </aside>
@@ -123,25 +123,29 @@
             <section class="pv-section" id="investigar">
                 <h2 class="pv-section-title">Investigar</h2>
 
-                <p>During this project, I worked on redesigning a small e-commerce platform to improve user experience and increase conversion rates.</p>
+                <p>This project involved designing a comprehensive mental health support application from concept to final prototype. The goal was to create a safe, accessible platform for users seeking mental health resources.</p>
 
-                <h3>Research Phase</h3>
+                <h3>Discovery & Research</h3>
 
-                <p>I started by conducting user interviews with 8 customers to understand their shopping behaviors and pain points. The main issues identified were:</p>
+                <p>I began with extensive user research to understand the sensitive nature of mental health apps and user expectations.</p>
 
-                <ul>
-                    <li>Confusing navigation structure</li>
-                    <li>Slow checkout process</li>
-                    <li>Poor mobile experience</li>
-                </ul>
-
-                <div class="pv-callout">
-                    <p>Key research question: Why are users abandoning their carts at the final step?</p>
+                <div class="pv-quote">
+                    <p>Mental health is not a destination, but a process. It's about how you drive, not where you're going.</p>
                 </div>
 
-                <div class="pv-insight info">
-                    <div class="pv-insight-number">73%</div>
-                    <p>of users abandoned cart due to complex checkout</p>
+                <p>The research involved interviews with 15 potential users, 3 mental health professionals, and analysis of 12 existing apps in the market.</p>
+
+                <p>Key insights from research:</p>
+
+                <div class="pv-insights">
+                    <div class="pv-insight info">
+                        <div class="pv-insight-number">89%</div>
+                        <p>of users wanted anonymity options</p>
+                    </div>
+                    <div class="pv-insight info">
+                        <div class="pv-insight-number">67%</div>
+                        <p>preferred self-guided activities over direct counseling</p>
+                    </div>
                 </div>
 
             </section>
@@ -150,20 +154,20 @@
             <section class="pv-section" id="definir">
                 <h2 class="pv-section-title">Definir</h2>
 
-                <h3>Solution</h3>
+                <h3>Design Challenges</h3>
 
-                <p>Based on the research findings, I redesigned the entire user flow focusing on simplicity and clarity.</p>
+                <p>The main challenges were balancing accessibility with privacy, creating trust through design, and handling crisis situations appropriately.</p>
 
-                <div class="pv-highlight">
-                    <h3>Simplicity is the ultimate sophistication</h3>
-                    <p>Leonardo da Vinci</p>
+                <div class="pv-icon-caption">
+                    <span class="pv-icon-caption-icon">🔒</span>
+                    <h4 class="pv-icon-caption-title">Privacy First</h4>
+                    <p class="pv-icon-caption-subtitle">All user data encrypted and stored locally when possible</p>
                 </div>
 
-                <p>The new design reduced checkout steps from 6 to 3 and implemented a mobile-first approach that improved usability across all devices.</p>
-
-                <div class="pv-image">
-                    <img src="./img/ecommerce-mockup.svg" alt="E-commerce platform redesign mockups showing before and after">
-                    <div class="pv-image-caption">Wireframes and mockups showing the streamlined checkout process</div>
+                <div class="pv-icon-caption">
+                    <span class="pv-icon-caption-icon">🎯</span>
+                    <h4 class="pv-icon-caption-title">Focused Content</h4>
+                    <p class="pv-icon-caption-subtitle">Curated resources instead of overwhelming information</p>
                 </div>
 
             </section>
@@ -177,27 +181,39 @@
             <!-- Design Phase -->
             <section class="pv-section" id="disenar">
                 <h2 class="pv-section-title">Diseñar</h2>
-                <p>Content for this phase will be developed based on template structure.</p>
+
+                <h3>Prototype & Testing</h3>
+
+                <p>I created high-fidelity prototypes focusing on calming visual design and intuitive navigation.</p>
+
+                <div class="pv-image">
+                    <img src="./img/mental-health-app-screens.png" alt="Screenshots of the mental health app showing main dashboard, mood tracking, and resources screens">
+                    <div class="pv-image-caption">Key screens from the final prototype showing the clean, calming interface design</div>
+                </div>
+
+                <p>User testing with 12 participants revealed positive feedback:</p>
+
+                <div class="pv-highlight">
+                    <h3>This feels safe and non-judgmental</h3>
+                    <p>User testing participant feedback</p>
+                </div>
+
             </section>
 
             <!-- Test Phase -->
             <section class="pv-section" id="testear">
                 <h2 class="pv-section-title">Testear</h2>
 
-                <h3>Results</h3>
+                <h3>Impact & Learnings</h3>
 
-                <p>The redesigned website launched after 3 months of development and testing. The results exceeded expectations:</p>
+                <p>The prototype was well-received by stakeholders and users alike. The project highlighted the importance of inclusive design and the responsibility we have as designers when working with vulnerable populations.</p>
 
                 <div class="pv-insight info">
-                    <div class="pv-insight-number">45%</div>
-                    <p>increase in conversion rate within first month</p>
+                    <div class="pv-insight-number">94%</div>
+                    <p>of users felt comfortable using the app during testing</p>
                 </div>
 
-                <div class="pv-callout info">
-                    <p>Important insight: Small UX improvements can lead to significant business impact when they address real user pain points.</p>
-                </div>
-
-                <p>This project taught me the importance of user-centered design and how small changes can have significant impact on business metrics.</p>
+                <p>This project strengthened my conviction that good UX design can genuinely improve people's lives and wellbeing.</p>
 
             </section>
         </div>
